--- a/ruff.toml
+++ b/ruff.toml
@@ -30,6 +30,7 @@ select = [
 # Ignore specific rules
 ignore = [
     "PLR0911",  # Too many return statements
+    "PLR0912",  # Too many branches
     "PLR0913",  # Too many arguments to function call
     "PLR2004",  # Magic value used in comparison
 ]
